# NLP_depression_detection

./: AI_NLP.ipynb  AI_NLP.sln  ML_model.py  README.md  data_loader.py  main.py  preprocessing.py  pyproject.toml  sentence.txt
.ipynb_checkpoints/: AI_NLP-checkpoint.ipynb
ML_deployment/: data.pkl  db.sqlite3
ML_deployment/NLPApp/: apps.py  views.py
ML_deployment/djangoMLDeployment/: asgi.py  settings.py  urls.py  wsgi.py
ML_deployment/savedModels/my_model/: keras_metadata.pb  saved_model.pb
ML_deployment/savedModels/my_model/variables/: variables.data-00000-of-00001  variables.index
ML_deployment/templates/: main.html
