[tool.poetry]
name = "ai_nlp"
version = "0.1.0"
description = ""
authors = ["astefanczyk <astefanczyk@student.agh.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.10.0"
scikit-learn = "^1.1.2"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
nltk = "^3.7"
re2 = "^0.2.24"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
